# vaic26

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README.vi.md  WIRE-PLAN.md  contract.md  contract.xlsx  docker-compose.yml  plan.md  spec.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  contract.md  docker-compose.yml  entrypoint.sh  migrate_and_seed.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/agents/: labeling_graph.py  learning_path_graph.py  state.py
backend/app/api/: deps.py
backend/app/bubblesheet/: detect.py
backend/app/core/: config.py  errors.py  security.py
backend/app/db/: mongodb.py  postgres.py
backend/app/ingestion/: bank_client.py  pdf_parser.py  tagger.py  taxonomy.py
backend/app/kg/: __init__.py  client.py  graph.py  learning_path.py  mastery.py  revision.py  root_cause.py
backend/app/models/: __init__.py  base.py  class_group.py  diagnosis.py  intervention.py  knowledge_graph.py  learning_path.py  mastery.py  (+5 more)
backend/bubblesheet/: calibrate.py  detect.py  generate.py  map.py  template.py
backend/diagnosis/: __init__.py  learning_path.py  mastery.py  mastery_graph_viz.html  policy_untested_viz.html
backend/ingestion/: bank_client.py  image_ocr.py  models.py  pipeline.py  splitter.py  tagger.py  taxonomy.py
backend/kg/: dashboard.py  graph.py  learning_path.py  mastery.py  models.py
backend/migrations/: env.py
backend/scripts/: seed_questions.py  smoke_test.py
backend/tests/: test_bank_client.py  test_bubblesheet.py  test_bubblesheet_full.py  test_health.py  test_kg_client.py  test_kg_dashboard.py  test_kg_graph.py  test_kg_integration.py  test_kg_learning_path.py  test_kg_mastery.py  test_kg_revision.py  test_kg_root_cause.py  test_mastery_sim.py  test_models.py  test_splitter_tagger.py
(+303 files in other folders)
